      one suite/arch but fails on another suite/arch.
    * fix Status page to not hide all charts when any platform does not have
      enough data
    * rewrite Status charts page. In special, instead of loading the full
      history via AJAX, which takes quite a while, embed a reduced view of the
      data in the HTML itself.
  * Drop debian/tests/worker-max-processes. The original issue was caused by
    (and fixed in) systemd >= 228 (see bug #823530), and the test ended up not
    being very reliable and keeps flapping on CI.
  * bin/debci-generate-index: remove call to debci-generate-html, since
    debci-update now call both debci-generate-index and debci-generate-html

  [ Jakub Wilk ]
  * public/style.css: Set correct font for alert, chart, rss, and tracker
    icons. (Closes: #821932)

  [ Brandon Fairchild ]
  * HTML UI: fix final copyright year in the footer

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 15 Apr 2016 15:36:17 -0300

debci (1.1.2) unstable; urgency=medium

  * debian/tests/control: restrict backend-schroot to only running on VMs
    (i.e. not on containers)
  * debian/debci-worker@.service: make sure there is no maximum number of
    processes; otherwise when using the lxc backend, we might get random
    failures saying `Cannot fork: resource temporarily unavailable` with
    systemd from stretch onwards.
    - added debian/tests/worker-max-processes as a test case
  * Add new backend `null`, which just uses the `null` virtualization regime
    in adt-run. This will be useful for running tests, but can also be used
    for running tests with zero overhead on trusted packages.
  * backends/fake: add support for executing an specific command instead of
    producing a random result if $DEBCI_FAKE_COMMAND is set.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 12 Apr 2016 11:23:17 -0300

debci (1.1.1) unstable; urgency=medium

  * debian/sudoers.d/debci: adjust to work with autopkgtest >= 3.19.3,