@@ -25,46 +25,15 @@
 
     <div class="col-md-8">
 
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-6"><h3>Packages</h3></div>
-        <div class="col-md-5"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-1"></div>
-
-        <div class="col-md-5">
-          <h4 class="page-header">Browse by prefix</h4>
-          <ul class="list-inline">
-
-            <% @package_prefixes.each do |prefix| %>
-                 <li><h5><a href="/packages/<%= prefix %>"><%= prefix %></a></h5></li>
-            <% end %>
-            <% if @package_prefixes.empty? %>
-              <em>(no data yet)</em>
-            <% end %>
-
-          </ul>
-        </div>
-
-        <div class="col-md-6">
-          <h4 class="page-header">Search</h4>
-            <div id='package-filter' class='form-inline'>
-              <div class="input-group">
-                <input type='text' id='package-search' class='form-control' size='200' placeholder="Search packages (regex welcome)"/>
-                <noscript><p class='text-center'>Cannot search without JavaScript</p></noscript>
-                <div class='search-count' style='display: none'>
-                  <span class='count'>N</span> result(s) found.
-                </div>
-                <div class='search-no-results' style='display: none'>
-                  No results found for your query.
-                </div>
-                <ul id='package-select'></ul>
-              </div>
-            </div>
-        </div> <!-- class='col-md-6' -->
-      </div> <!-- class='row' -->
+      <h3>Packages</h3>
+      <ul class="list-inline">
+        <% @package_prefixes.each do |prefix| %>
+          <li><h5><a href="/packages/<%= prefix %>"><%= prefix %></a></h5></li>
+        <% end %>
+        <% if @package_prefixes.empty? %>
+          <em>(no data yet)</em>
+        <% end %>
+      </ul>
 
     </div> <!-- class='col-md-8' -->
 
