@@ -34,7 +34,6 @@
             <ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
               <li><a href="/status/">Status</a></li>
-              <li><a href="/packages/">Packages</a></li>
               <li><a href="/doc/">Documentation</a></li>
               <li><a href="/data/">Data</a></li>
             </ul>
