@@ -98,90 +98,6 @@ jQuery(function($) {
     });
   });
 
-  on('#package-select', function() {
-    $.get(PACKAGES_HTML_DIR + '/packages.json', function(data) {
-      $.each(data, function(index, item) {
-        var package_dir = pkg_dir(item.package);
-
-        var $item = $('<li></li>');
-        $item.attr('data-package', item.package);
-
-        var $link = $('<a></a>');
-        $link.attr('href', '/packages/' + package_dir);
-        $link.html('<b>' + item.package + '</b> (package page)');
-        $item.append($link);
-
-        var $sublinks = $('<div></div>');
-        $sublinks.addClass('search-sub-links');
-
-        for (var platform in item.status) {
-          var $link = $('<a></a>');
-          $link.addClass(item.status[platform]);
-          $link.attr('href', '/packages/' + package_dir + '/' + platform);
-          $link.html(platform);
-          $sublinks.append($link)
-        }
-        $item.append($sublinks);
-
-        $('#package-select').append($item);
-
-      });
-
-      $('#package-select').hide();
-
-      if ($('#package-search').val() != '') {
-        // trigger search immediately if there is something in the search box
-        // already
-        $('#package-search').keyup();
-      }
-    });
-
-    if (window.location.search.match(/\?q=/)) {
-      var query_string = window.location.search.replace(/^\?/, '').split('&');
-      for (var i = 0; i < query_string.length; i++) {
-        var parts = query_string[i].split('=');
-        var key = parts[0];
-        if (key == 'q') {
-          var value = decodeURIComponent(parts[1]);
-          $('#package-search').val(value);
-        }
-      }
-    }
-  });
-
-  $('#package-search').keyup(function() {
-      var query = $(this).val();
-
-      if (query.length > 0) {
-        $('.request-search').hide();
-        $('#package-select').show();
-        var found = 0;
-        $('#package-select li').each(function() {
-          if ($(this).attr('data-package').match(query)) {
-            $(this).show();
-            found++;
-          } else {
-            $(this).hide();
-          }
-        });
-        if (found > 0) {
-          $('.search-no-results').hide();
-          $('.search-count .count').html(found);
-          $('.search-count').show();
-        } else {
-          $('.search-no-results').show();
-          $('.search-count').hide();
-        }
-      } else {
-        $('.search-no-results').hide();
-        $('.request-search').show();
-        $('.search-count').hide();
-        $('#package-select li').hide();
-      }
-
-      window.history.replaceState({}, '', '?q=' + encodeURIComponent(query));
-  });
-
   if (window.location.pathname == '/') {
     var match = window.location.hash.match(/^#package\/(\S+)$/);
     if (match) {
